hphp/test/zend/good/Zend/tests/unset_cv01.php.expectf
ok

Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: x' in %s/unset_cv01.php:5
Stack trace:
%A
